# lsimons-agent

./: .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
docker/: Dockerfile.builder
docs/: IMPLEMENTATION_PLAN.md  PHASE1_LOG.md  PHASE2_LOG.md  PHASE3_LOG.md  PHASE4_LOG.md  PHASE5_LOG.md  PHASE6_LOG.md  SPECS.md
docs/design/: build-system.md
docs/spec/: 000-shared-patterns.md
docs/specs/: vm-on-mac-thread-documentation.md
scripts/: build_backend.py  build_icons.py
