[project]
name = "lsimons-agent-workspace"
version = "0.1.0"
description = "Custom CLI coding agent workspace"
requires-python = ">=3.12"

[dependency-groups]
dev = ["ruff", "pytest", "pyinstaller", "pillow"]

[tool.uv.workspace]
members = ["packages/lsimons-agent", "packages/mock-llm-server", "packages/lsimons-agent-web"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["packages/lsimons-agent/tests", "packages/lsimons-agent-web/tests"]
